--- a/Assets/Resources/Apple.json
+++ b/Assets/Resources/Apple.json
@@ -1,1 +1,14 @@
-{"Values":{"Name":"apple"},"DataPackets":{"Item":{"Values":{"Weight":"0.1","Volume":"1"},"DataPackets":{}},"ItemStack":{"Values":{"MaxStack":"999","CurrentAmount":"5"},"DataPackets":{}}}}
+{
+   "Values": {
+      "Name": "Apple"
+   },
+   "DataPackets": {
+      "Item": {
+         "Values": {
+            "Weight": "0.01",
+            "Volume": "0.01"
+         },
+         "DataPackets": {}
+      }
+   }
+}
